objects/CMPL123__Session_State_Insights__c.object
<CustomObject>
    <description>This object stores AI Insights Payload received from AI Engine.</description>
    <fields>
        <fullName>CMPL123__Insight_Payload_Seq__c</fullName>
        <label>Insight Payload Seq</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123__Insight_Payload__c</fullName>
        <label>Insight Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__Insight_Template_Id__c</fullName>
        <label>Insight Template Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Session_State__c</fullName>
        <label>Session State</label>
        <referenceTo>CMPL123__Session_State__c</referenceTo>
        <relationshipLabel>Session State Insights</relationshipLabel>
        <relationshipName>Session_State_Insights</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CMPL123__TrackWiseDigital__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TrackWiseDigital</label>
        <type>Checkbox</type>
    </fields>
    <label>Session State Insight</label>
    <nameField>
        <displayFormat>INSIGHT-{0000}</displayFormat>
        <label>Session State Insights Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Session State Insights</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>